# xx-util

./: IMPLEMENTATION_PLAN.md  README.md  SPEC.md  pyproject.toml
xx/: __init__.py  __main__.py  cli.py  colors.py  config.py  discovery.py  executor.py  memory.py  migrate.py  prompt.py  providers.py  reporting.py  safety.py  spinner.py  storage.py  types.py
