[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xx-util"
version = "0.1.0"
description = "Natural language to shell command CLI with audit reporting"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Suraj Pillai" }]
dependencies = []

[project.scripts]
xx = "xx.cli:main"

[tool.setuptools]
packages = ["xx"]
